--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,27 @@
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
+# Build output
+/.next
+/out
+/build
+.vercel
+
+# Testing
 /coverage
 
-# next.js
-/.next/
-/out/
+# Environment variables
+.env*.local
 
-# production
-/build
-
-# misc
+# Misc
 .DS_Store
 *.pem
+*.tsbuildinfo
+next-env.d.ts
 
-# debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts 
