--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "next": "^13.0.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "pg": "^8.10.0"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
     "eslint-config-next": "^13.0.0"
   }
-} 
+}
