--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
     "next": "^13.0.0",
+    "pg": "^8.10.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "pg": "^8.10.0"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
